[package]
name = "jwt-validator"
version = "0.3.0"
authors = ["bdbmammoth <brian.deboer@mammoth.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
async-std = "1.6.2"
base64 = "0.13.0"
futures = "0.3.5"
futures-util = "0.3.5"
jsonwebtoken = { git = "https://github.com/bdbmammoth/jsonwebtoken", branch = "less-decoding" }
log = "0.4.8"
openssl = "0.10.29"
regex = "1.3.9"
serde = "1.0.110"
serde_json = "1.0.53"
surf = "2.1.0"
lazy_static = "1.4.0"